--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>JAYANTH KRISHNA KALAVAPUDI</h1>
+        <h1>JAYANTH KRISHNA KALAVAPUDI ILLINois</h1>
         <h2> Web Application Foundations</h2>
     </header>
     <section>
